# riskpulse

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml
airflow/dags/: .gitkeep
airflow/plugins/operators/: .gitkeep
airflow/plugins/sensors/: .gitkeep
config/: business_rules.yaml  kafka_config.yaml  logging.yaml  normalization_mappings.yaml  settings.yaml  validation_rules.yaml
config/environments/: dev.yaml  prod.yaml  staging.yaml
dashboards/powerbi/data_connections/: .gitkeep
dashboards/streamlit/components/: .gitkeep
dashboards/streamlit/pages/: .gitkeep
database/migrations/: .gitkeep  001_create_transactions.sql  002_create_fraud_alerts.sql  003_create_risk_scores.sql  004_create_audit_logs.sql  005_create_rules.sql
database/seeds/: .gitkeep  seed_rules.sql  seed_test_data.sql
database/snowflake/procedures/: .gitkeep  load_transactions.sql  refresh_materialized_views.sql
database/snowflake/schemas/: .gitkeep  analytics_schema.sql  raw_schema.sql  reporting_schema.sql  staging_schema.sql
docs/diagrams/: .gitkeep  alert_generation_sequence.mmd  data_flow.mmd  er_diagram.mmd  system_architecture.mmd  transaction_scoring_sequence.mmd
infrastructure/aws/: s3_lifecycle_policy.json
infrastructure/aws/cloudwatch/alarms/: .gitkeep
infrastructure/aws/iam_policies/: .gitkeep
infrastructure/docker/: .gitkeep  Dockerfile.api
infrastructure/terraform/: .gitkeep
ml/evaluation/: .gitkeep
ml/models/: .gitkeep
ml/notebooks/: .gitkeep
ml/training/: .gitkeep
schemas/: transaction_event.avsc
scripts/: backup_database.sh  deploy.sh  generate_test_data.py  run_migrations.sh  setup_local.sh
src/: __init__.py
src/alerting/: __init__.py
src/api/: __init__.py  app.py
src/api/middleware/: __init__.py  auth.py  logging_middleware.py  rate_limiter.py
src/api/routes/: health.py  rules.py  transactions.py
src/api/schemas/: transaction_schema.py
src/enrichment/: __init__.py
src/fraud_detection/: __init__.py
src/ingestion/: __init__.py  api_ingestion.py  kafka_admin.py  kafka_producer.py  schema_registry.py
src/monitoring/: __init__.py
src/storage/: __init__.py  s3_handler.py
src/transformation/: __init__.py  cleaner.py  normalizer.py
src/utils/: __init__.py  config.py  constants.py  encryption.py  logger.py
src/validation/: __init__.py  quarantine_handler.py  rules_engine.py  schema_validator.py
tests/: __init__.py  conftest.py
tests/fixtures/: generated_transactions.json  invalid_transactions.json  sample_fraud_alerts.json  sample_transactions.json
tests/unit/: test_api.py  test_kafka_producer.py  test_rules_engine.py  test_s3_handler.py  test_schema_registry.py  test_transformer.py  test_validator.py
(+1 files in other folders)
