[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "riskpulse"
version = "0.1.0"
description = "Fraud Analytics & Risk Intelligence Platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "RiskPulse Team" }]

dependencies = [
    "kafka-python>=2.0.2",
    "confluent-kafka>=2.3.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.2.0",
    "shap>=0.44.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "snowflake-connector-python>=3.6.0",
    "boto3>=1.34.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "redis>=5.0.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "structlog>=24.1.0",
    "cryptography>=42.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pyarrow>=15.0.0",
    "avro-python3>=1.10.2",
    "great-expectations>=0.18.0",
    "tenacity>=8.2.0",
    "circuitbreaker>=2.0.0",
]

[project.optional-dependencies]
airflow = [
    "apache-airflow>=2.8.0",
    "apache-airflow-providers-amazon>=8.0.0",
    "apache-airflow-providers-snowflake>=5.0.0",
    "apache-airflow-providers-apache-kafka>=1.3.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "testcontainers>=3.7.0",
    "moto[s3,sns,sqs,cloudwatch]>=5.0.0",
    "locust>=2.23.0",
    "factory-boy>=3.3.0",
    "faker>=22.0.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "bandit>=1.7.7",
    "safety>=3.0.0",
    "pre-commit>=3.6.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "performance: Performance tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
